--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.desiredsoftware.githubsearcher.di.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_baseline_person_search_24"
         android:label="@string/app_name"
